# code_archive

./: README.md  docstring.py  hello.py  pyproject.toml
python_tutorial/: 1.ipynb
utils/: colab.ipynb  colab_JupyterNotebook.ipynb  count_img_size.py  csv.py  decorator.ipynb  lr_scheduler.py  move_file.py  pdf2md.py  tqdm.py  tracking.py  unzip.py  wandb.ipynb  zip.py
utils/EDA_ML/: unique.py
utils/eda_image/: Audiomentations_example.ipynb  count_img_size.py  plot_albumentations.ipynb  plot_luminance_histogram.ipynb
utils/eda_tabular/: baseline.py  baseline_02.py  check_each_column_difference.py  csv.py  plot_correlation_heatmap.py  plot_histograms_with_kde.py  plot_target.py  plot_violin.py  unique.py
utils/eda_text/: convert_csv2txt.py  hf_model_downloads.py  translate_dataset.py  util_tiktoken.ipynb
utils/manage_files/: copy_paste_dir.py  copy_paste_dir_v2_with_shell.py  copy_paste_dir_v2_with_shell.sh  demo.json  get_file_list.py  json.py  pathlib_os_path.ipynb  pathlib_os_path_img.avif  scoring_competition_cv_lb.py  unzip.ipynb  unzip_main.py  zip.ipynb  zip.py
utils/python/: cat.py  cat2.py  convertPDF_parallel.py  log.ipynb  plot_f1pr.py  seed.py  synthesize_avg_img_parallel.py  timer.py
utils/shell/: README.md  create_env_hle.sh
utils/visualizations/: calculate_mean_std.py  dimensionality_reduction.py  plot_histograms_with_kde.py
utils/visualizations/table_data/: 2value.ipynb  plot_MinMaxScaling.ipynb  plot_correlation_heatmap.py  plot_ml_model_explanation.py
utils/wandb/: wandb.py
