[project]
name = "code-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "torch>=2.5.1",
]
extra-index-url = ["https://download.pytorch.org/whl/cu121"]
